samples/_failures_safe/1761481164_ad236f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5f094ad4.c: In function ‘main’:
./samples/SAFE/__tmp_5f094ad4.c:183:21: error: expected ‘)’ at end of input
  183 |                token
      |                     ^
      |                     )
./samples/SAFE/__tmp_5f094ad4.c:182:15: note: to match this ‘(’
  182 |         printf("%-12s %-12s %-8d %-8d\n",
      |               ^
./samples/SAFE/__tmp_5f094ad4.c:183:16: error: expected declaration or statement at end of input
  183 |                token
      |                ^~~~~
./samples/SAFE/__tmp_5f094ad4.c:183:16: error: expected declaration or statement at end of input
